@@ -9,8 +9,12 @@ CompileScript: ./setup.sh %p
 InstallScript: ./install.sh %i
 #
 PostInstScript: <<
-	if [ "$2" = "configure" ]; then
-		echo "Would clean up all installed .la files"
+	if [ "$1" = "configure" ]; then
+		echo "Cleaning up all installed .la files (this may take a moment)"
+		echo '  find "%p" -name '"'"'*.la'"'"' -and -type f -print0 | xargs -0 perl -pi -e "s/^(dependency_libs)=.*/\1='"''"'/" || true'
+#		find "%p" -name '*.la' -and -type f -print0 | xargs -0 perl -pi -e "s/^(dependency_libs)=.*/\1=''/" || true
+		echo "dry-run-only debug; this would hit:"
+		find "%p" -name '*.la' -and -type f -print0 | xargs -0 echo || true
 	fi
 <<
 #
