@@ -1,3 +1,7 @@
+2009-12-21  Daniel Macks  <dmacks@netspace.org>
+
+	* dpkg-base-files.info.in, postinst.in: dry-run of .la cleaning
+
 2009-12-19  Daniel Macks  <dmacks@netspace.org>
 
 	* postinst.in: figure out the being-installed list of .la
